@@ -4,6 +4,7 @@
 
 Version 1.4.11 - SVN
 --------------------
+  - Fix #1727033 config.pl not detecting auth suppoer correctly
   - Fix display of X-Priority in message view.
   - Work around mailers sending broken Date headers with no space after the
     first comma.
